# breast-density-classification

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
configs/: configs.yaml
experiments/binary/complete-dataset/: train_stats.txt
experiments/binary/first_experiments/all-datasets/: test_stats.txt
experiments/binary/max_class/all-datasets/: train_stats.txt
experiments/binary/max_class/three-datasets/: params.yaml
experiments/binary/second_experiments/four-datasets/: test_stats.txt  train_stats.txt
experiments/binary/second_experiments/three-datasets/: test_stats.txt
experiments/binary/threshold/four-datasets/: params.yaml
experiments/binary/threshold_best/all-datasets/: params.yaml
experiments/max_class/two-datasets/: params.yaml
experiments/multiclass/first_experiments/convnext_small/: params.yaml  test_metrics.txt
experiments/multiclass/first_experiments/convnext_tiny/: params.yaml
experiments/multiclass/first_experiments/resnet101/: params.yaml  test_metrics.txt
experiments/multiclass/first_experiments/resnet34/: params.yaml  test_metrics.txt  test_stats.txt
experiments/multiclass/first_experiments/resnet50/: params.yaml  test_metrics.txt  train_stats.txt
experiments/multiclass/second_experiments/convnext_base/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/convnext_large/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/convnext_small/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/convnext_tiny/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/densenet121/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/densenet169/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/efficientnet_b0/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/efficientnet_b1/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/efficientnet_b2/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/resnet101/: params.yaml  test_metrics.txt
experiments/multiclass/second_experiments/resnet18/: params.yaml  test_metrics.txt  test_stats.txt
src/: helper.py  models.py  train.py  transforms.py
src/datasets/: README.md  base_converter.py  baseconverter.py  bmcd.py  bmcd_converter.py  dataloader.py  inbreast.py  inbreast_converter.py  miniddsm_converter.py  oneview_dataset.py  rsna.py  rsna_converter.py  vindr_converter.py
src/models/: base_model_builder.py  model_factory.py  resnet_builder.py
src/utils/: config.py  dataloader.py  logging.py  loss.py  losses.py  plotting.py  processing.py
src/workflow/base/: model_classifier.py  model_tester.py  model_trainer.py
src/workflow/binary/: model_classifier.py  model_tester.py  model_trainer.py
src/workflow/multiclass/: model_classifier.py  model_tester.py  model_trainer.py
(+298 files in other folders)
