[project]
name = "breast-density-classification"
version = "0.1.0"
description = "Breast density classification using CNNs"
authors = [{name = "Matheus Loiola Pinto Curado Silva", email = "matheusloiolapinto@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pydicom>=3.0.1",
    "pyyaml>=6.0.2",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
